use scaleExact for banner

--- a/apartments.yml
+++ b/apartments.yml
@@ -47,8 +47,7 @@ attachmentserver_variants:
         scale:
             width: 600
             height: 600
-
     banner:
-        scale:
+        scaleExact:
             width: 900
             height: 300
